# network-port-scan

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
src/portscanner/: __init__.py  __main__.py  banner.py  cli.py  output.py  ports.py  scanner.py  synscan.py  targets.py
tests/: test_ports.py  test_scanner.py  test_synscan.py  test_targets.py
